log
Wed 24 Apr 2024 05:29:58 AM UTC: 
 tests:  0|6
total_score: 0/70
142eba2
Wed 24 Apr 2024 01:20:00 PM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
7afc619
Wed 24 Apr 2024 01:21:17 PM UTC: 
 hashmap.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
   59 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2a75d19
Wed 24 Apr 2024 01:21:40 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
da1aa42
Wed 24 Apr 2024 01:21:53 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:3: error: ‘mapa’ undeclared (first use in this function)
   56 |   mapa->buckets = (Pair **)calloc(capacity,sizeof(Pair *));
      |   ^~~~
hashmap.c:56:3: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
   60 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d6f6319
Wed 24 Apr 2024 01:22:56 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:21: error: ‘HashMapa’ undeclared (first use in this function); did you mean ‘HashMap’?
   56 |   HashMap * mapa = (HashMapa *)malloc(sizeof(HashMap));
      |                     ^~~~~~~~
      |                     HashMap
hashmap.c:56:21: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:56:31: error: expected expression before ‘)’ token
   56 |   HashMap * mapa = (HashMapa *)malloc(sizeof(HashMap));
      |                               ^
Compilation failed
b3708b4
Wed 24 Apr 2024 01:23:13 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2652f7b
Wed 24 Apr 2024 01:46:21 PM UTC: 
 hashmap.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:41: error: expected statement before ‘]’ token
   47 |       if(map->buckets[posicion] == NULL)])
      |                                         ^
hashmap.c:47:7: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   47 |       if(map->buckets[posicion] == NULL)])
      |       ^~
hashmap.c:47:42: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   47 |       if(map->buckets[posicion] == NULL)])
      |                                          ^
hashmap.c:47:42: error: expected statement before ‘)’ token
cc1: all warnings being treated as errors
Compilation failed
343dc60
Wed 24 Apr 2024 01:46:29 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:41: error: expected statement before ‘)’ token
   47 |       if(map->buckets[posicion] == NULL))
      |                                         ^
Compilation failed
de655b1
Wed 24 Apr 2024 01:46:35 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
fe7614c
